# advent2024

./: .gitignore  README.md  main.py  pyproject.toml
advent2024/common/: model.py
advent2024/day01/: day01.py
advent2024/day02/: day02.py  test.txt
advent2024/day03/: day03.py  test.txt
advent2024/day04/: day04.py
advent2024/day05/: day05.py
advent2024/day06/: day06.py
advent2024/day07/: day07.py
advent2024/day08/: day08.py
